<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="56sp"
        android:textColor="@color/red"
        android:fontFamily="@font/k2d_bold"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/btnTerritorios"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/territorios"
        android:fontFamily="@font/k2d_medium"
        android:textSize="32dp"
        android:letterSpacing="0.05"
        android:textColor="@color/texto"/>

    <TextView
        android:id="@+id/btnBanderas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/banderas"
        android:fontFamily="@font/k2d_medium"
        android:textSize="32dp"
        android:letterSpacing="0.05"
        android:textColor="@color/texto"
        android:clickable="true"/>

    <TextView
        android:id="@+id/btnBrujula"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/brujula"
        android:fontFamily="@font/k2d_medium"
        android:textSize="32dp"
        android:letterSpacing="0.05"
        android:textColor="@color/texto"/>

    <TextView
        android:id="@+id/btnBiomas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/biomas"
        android:fontFamily="@font/k2d_medium"
        android:textSize="32dp"
        android:letterSpacing="0.05"
        android:textColor="@color/texto"/>

</LinearLayout>